[package]
description = "parses linux ip tools output and writes them back"
repository = "https://github.com/mabels/linux-ip-parser.git"
keywords = ["ip", "network", "linux"]
license = "MIT"
license-file = "../LICENSE.txt"
name = "linux_ip"
version = "0.1.0"
authors = ["Meno Abels <meno.abels@adviser.com>"]

[dependencies]
regex = "0.1.69"
log = "0.3.6"

